update Reti e Sistemi

--- a/Second Year/Reti di Calcolatori/EserciziReti.tex
+++ b/Second Year/Reti di Calcolatori/EserciziReti.tex
@@ -303,4 +303,23 @@ Un'applicazione A deve trasferire 104400 byte verso un'applicazione B. Si suppon
 \[CWND{finale} = CWND{old} = \frac{\# ACK}{CWND_{old}} = 3 + \frac{1}{3}\]
 finisce in $t = 16$
 
+\section{Esercizi in preparazione all'esame}
+
+\subsection{Esercizio numero 2 24/9/2019}
+
+4 LAN
+
+\begin{itemize}
+    \item LAN1 130 host
+    \item LAN2 270
+    \item LAN 3 65
+    \item LAN 4 35
+\end{itemize}
+
+LAN1 contiene l'indirizzo 46.144.141.41
+\begin{itemize}
+    \item Blocco CIDR totale
+    \item Indirizzi di rete per le 4 LAN
+\end{itemize}
+
 \end{document}
