--- a/Second Year/Sistemi/Sistemi.tex
+++ b/Second Year/Sistemi/Sistemi.tex
@@ -671,4 +671,9 @@ Prendiamo per esempio il sistema massa molla smorzatore:
     \item \textbf{Spostamento dei nodi prima di un blocco}: posso spostare i nodi prima di un blocco
     \item \textbf{Spostamento dei nodi dopo un blocco}: posso spostare i nodi dopo un blocco
 \end{enumerate}
+
+\subsection{Operazioni sui blocchi}
+
+
+
 \end{document}
