--- a/setup.sty
+++ b/setup.sty
@@ -11,6 +11,7 @@
 \usepackage{booktabs}
 \usepackage{cancel}
 \usepackage{amsmath}
+\usepackage{csquotes}
 \usepackage{forest}
 \usepackage{amsthm}
 \usepackage{amssymb}
@@ -37,7 +38,7 @@
 \newtheorem{proposition}[theorem]{Proposition} % Proposition uses the same counter
 \newtheorem{property}[theorem]{Propriety}
 \theoremstyle{definition}
-\newtheorem{definition}[theorem]{Definition}
+\newtheorem{definition}[section]{Definition}
 
 % Remark-style theorem
 \theoremstyle{remark}
