--- a/setup.sty
+++ b/setup.sty
@@ -36,9 +36,10 @@
 \newtheorem{lemma}[theorem]{Lemma}        % Lemmas use the same counter as theorems
 \newtheorem{corollary}[theorem]{Corollary} % Corollaries use the same counter as theorems
 \newtheorem{proposition}[theorem]{Proposition} % Proposition uses the same counter
-\newtheorem{property}[theorem]{Propriety}
+\newtheorem{property}[theorem]{Property}
 \theoremstyle{definition}
-\newtheorem{definition}[section]{Definition}
+\newtheorem{definition}[theorem]{Definition} % Now uses the same counter as theorems
+
 
 % Remark-style theorem
 \theoremstyle{remark}
