--- a/Second Year/Sistemi/EserciziSistemi/EserciziSistemi.tex
+++ b/Second Year/Sistemi/EserciziSistemi/EserciziSistemi.tex
@@ -394,6 +394,15 @@ Ora facciamo la convoluzione con $u(t)$:
     }
 \end{equation*}
 
+\section{Esercizi Sistemi LTI con TdL}
+
+\subsection{Esercizio 1}
+\subsection{Esercizio 2}
+\subsection{Esercizio 3}
+
+
+
+
 \pagebreak
 \section{Esercizi fatti in classe}
 \subsection{Esercizio 1}
@@ -555,10 +564,6 @@ Possiamo semplificare e quindi:
 \begin{equation*}
     \tcbox[nobeforeafter]{\(v_f(t) = \left(\frac{1}{16}e^{-2t} - \frac{1}{4}te^{-2t} + \frac{1}{8}sin(2t)\right)\delta_{-1}(t)\)}
 \end{equation*}
-
-
-
-
 
 \end{document}
 
