--- a/Second Year/Reti di Calcolatori/EserciziReti.tex
+++ b/Second Year/Reti di Calcolatori/EserciziReti.tex
@@ -365,4 +365,19 @@ Per la \textbf{LAN 4} abbiamo bisogno di 6 bit. In tutto questo procedimento abb
     \end{tikzpicture}
 \end{figure}
 
+\subsection{Esercizio numero 3 27/6/2019 (TCP)}
+
+Applicazione A a B 77500 byte
+
+\begin{itemize}
+    \item MSS 1250 byte
+    \item RCVWND t = 0 10000 byte
+    \item t > 4 destinazione annuncia 17500 byte
+    \item t > 8 destinazione annuncia 12500 byte
+    \item STT = RCWND
+    \item RTT = 1 sec
+    \item RTO = 2RTT
+    \item DOWN DI RETE: [8, 10] e da [13.5, 14.5]   
+\end{itemize}
+
 \end{document}
